# obsidian-quick-add

./: README.md  package-lock.json  package.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: obsidian.rs
src/lib/: dateParser.ts
src/lib/components/: QuickInput.svelte
src/routes/: +page.svelte
