[package]
name = "obsidian-quick-add"
version = "0.1.0"
description = "Quick add todos to Obsidian daily notes"
authors = ["you"]
edition = "2021"

[lib]
name = "obsidian_quick_add_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
tokio = { version = "1", features = ["fs"] }

